samples/_failures_safe/1761702358_9ed5cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aea449ce.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_aea449ce.c:132:9: error: expected expression at end of input
  132 |         if (strcmp(entry->level, level) == 0)
      |         ^~
./samples/SAFE/__tmp_aea449ce.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aea449ce.c:132:9: error: expected declaration or statement at end of input
